// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders correctly when listing resources: Header title 1`] = `
<span
  class="ant-page-header-heading-title"
  title="User Management"
>
  User Management
</span>
`;

exports[`renders correctly when listing resources: Search 1 page 1 1`] = `
<td
  class="ant-table-cell ant-table-cell-ellipsis"
/>
`;

exports[`renders correctly when listing resources: Search 1 page 1 2`] = `
<td
  class="ant-table-cell ant-table-cell-ellipsis"
  title="april4"
>
  april4
</td>
`;

exports[`renders correctly when listing resources: Search 1 page 1 3`] = `
<td
  class="ant-table-cell ant-table-cell-ellipsis"
  title="petertest"
>
  petertest
</td>
`;

exports[`renders correctly when listing resources: Search 1 page 1 4`] = `
<td
  class="ant-table-cell ant-table-cell-ellipsis"
  title="april4petertest"
>
  april4petertest
</td>
`;

exports[`renders correctly when listing resources: Search 1 page 1 5`] = `
<td
  class="ant-table-cell"
>
  <a
    href="/admin/users/edit/081724e8-5fc1-47dd-8d0c-fa0c6ae6ddf0"
  >
    Edit
  </a>
  <div
    class="ant-divider ant-divider-vertical"
    role="separator"
  />
  <span
    aria-label="more"
    class="anticon anticon-more ant-dropdown-trigger more-options"
    data-testid="action-dropdown"
    role="img"
    tabindex="-1"
  >
    <svg
      aria-hidden="true"
      data-icon="more"
      fill="currentColor"
      focusable="false"
      height="1em"
      viewBox="64 64 896 896"
      width="1em"
    >
      <path
        d="M456 231a56 56 0 10112 0 56 56 0 10-112 0zm0 280a56 56 0 10112 0 56 56 0 10-112 0zm0 280a56 56 0 10112 0 56 56 0 10-112 0z"
      />
    </svg>
  </span>
</td>
`;

exports[`renders correctly when listing resources: table row 1 page 1 1`] = `
<td
  class="ant-table-cell ant-table-cell-ellipsis"
/>
`;

exports[`renders correctly when listing resources: table row 1 page 1 2`] = `
<td
  class="ant-table-cell ant-table-cell-ellipsis"
  title="april4"
>
  april4
</td>
`;

exports[`renders correctly when listing resources: table row 1 page 1 3`] = `
<td
  class="ant-table-cell ant-table-cell-ellipsis"
  title="petertest"
>
  petertest
</td>
`;

exports[`renders correctly when listing resources: table row 1 page 1 4`] = `
<td
  class="ant-table-cell ant-table-cell-ellipsis"
  title="april4petertest"
>
  april4petertest
</td>
`;

exports[`renders correctly when listing resources: table row 1 page 1 5`] = `
<td
  class="ant-table-cell"
>
  <a
    href="/admin/users/edit/081724e8-5fc1-47dd-8d0c-fa0c6ae6ddf0"
  >
    Edit
  </a>
  <div
    class="ant-divider ant-divider-vertical"
    role="separator"
  />
  <span
    aria-label="more"
    class="anticon anticon-more ant-dropdown-trigger more-options"
    data-testid="action-dropdown"
    role="img"
    tabindex="-1"
  >
    <svg
      aria-hidden="true"
      data-icon="more"
      fill="currentColor"
      focusable="false"
      height="1em"
      viewBox="64 64 896 896"
      width="1em"
    >
      <path
        d="M456 231a56 56 0 10112 0 56 56 0 10-112 0zm0 280a56 56 0 10112 0 56 56 0 10-112 0zm0 280a56 56 0 10112 0 56 56 0 10-112 0z"
      />
    </svg>
  </span>
</td>
`;

exports[`renders correctly when listing resources: table row 2 page 1 1`] = `
<td
  class="ant-table-cell ant-table-cell-ellipsis"
/>
`;

exports[`renders correctly when listing resources: table row 2 page 1 2`] = `
<td
  class="ant-table-cell ant-table-cell-ellipsis"
  title="Blue"
>
  Blue
</td>
`;

exports[`renders correctly when listing resources: table row 2 page 1 3`] = `
<td
  class="ant-table-cell ant-table-cell-ellipsis"
  title="Test"
>
  Test
</td>
`;

exports[`renders correctly when listing resources: table row 2 page 1 4`] = `
<td
  class="ant-table-cell ant-table-cell-ellipsis"
  title="blue"
>
  blue
</td>
`;

exports[`renders correctly when listing resources: table row 2 page 1 5`] = `
<td
  class="ant-table-cell"
>
  <a
    href="/admin/users/edit/7f5d1800-e1c2-4c31-b01d-d084b8c96bb0"
  >
    Edit
  </a>
  <div
    class="ant-divider ant-divider-vertical"
    role="separator"
  />
  <span
    aria-label="more"
    class="anticon anticon-more ant-dropdown-trigger more-options"
    data-testid="action-dropdown"
    role="img"
    tabindex="-1"
  >
    <svg
      aria-hidden="true"
      data-icon="more"
      fill="currentColor"
      focusable="false"
      height="1em"
      viewBox="64 64 896 896"
      width="1em"
    >
      <path
        d="M456 231a56 56 0 10112 0 56 56 0 10-112 0zm0 280a56 56 0 10112 0 56 56 0 10-112 0zm0 280a56 56 0 10112 0 56 56 0 10-112 0z"
      />
    </svg>
  </span>
</td>
`;

exports[`renders correctly when listing resources: table row 3 page 1 1`] = `
<td
  class="ant-table-cell ant-table-cell-ellipsis"
/>
`;

exports[`renders correctly when listing resources: table row 3 page 1 2`] = `
<td
  class="ant-table-cell ant-table-cell-ellipsis"
  title="Chw"
>
  Chw
</td>
`;

exports[`renders correctly when listing resources: table row 3 page 1 3`] = `
<td
  class="ant-table-cell ant-table-cell-ellipsis"
  title="User"
>
  User
</td>
`;

exports[`renders correctly when listing resources: table row 3 page 1 4`] = `
<td
  class="ant-table-cell ant-table-cell-ellipsis"
  title="chw_demo_user"
>
  chw_demo_user
</td>
`;

exports[`renders correctly when listing resources: table row 3 page 1 5`] = `
<td
  class="ant-table-cell"
>
  <a
    href="/admin/users/edit/40fe3724-95e3-48cb-b90a-f67aebcf4120"
  >
    Edit
  </a>
  <div
    class="ant-divider ant-divider-vertical"
    role="separator"
  />
  <span
    aria-label="more"
    class="anticon anticon-more ant-dropdown-trigger more-options"
    data-testid="action-dropdown"
    role="img"
    tabindex="-1"
  >
    <svg
      aria-hidden="true"
      data-icon="more"
      fill="currentColor"
      focusable="false"
      height="1em"
      viewBox="64 64 896 896"
      width="1em"
    >
      <path
        d="M456 231a56 56 0 10112 0 56 56 0 10-112 0zm0 280a56 56 0 10112 0 56 56 0 10-112 0zm0 280a56 56 0 10112 0 56 56 0 10-112 0z"
      />
    </svg>
  </span>
</td>
`;

exports[`renders correctly when listing resources: table row 4 page 1 1`] = `
<td
  class="ant-table-cell ant-table-cell-ellipsis"
/>
`;

exports[`renders correctly when listing resources: table row 4 page 1 2`] = `
<td
  class="ant-table-cell ant-table-cell-ellipsis"
  title="John"
>
  John
</td>
`;

exports[`renders correctly when listing resources: table row 4 page 1 3`] = `
<td
  class="ant-table-cell ant-table-cell-ellipsis"
  title="Coda"
>
  Coda
</td>
`;

exports[`renders correctly when listing resources: table row 4 page 1 4`] = `
<td
  class="ant-table-cell ant-table-cell-ellipsis"
  title="codademo"
>
  codademo
</td>
`;

exports[`renders correctly when listing resources: table row 4 page 1 5`] = `
<td
  class="ant-table-cell"
>
  <a
    href="/admin/users/edit/46bccd72-0505-487b-a208-9a4d2c4e033c"
  >
    Edit
  </a>
  <div
    class="ant-divider ant-divider-vertical"
    role="separator"
  />
  <span
    aria-label="more"
    class="anticon anticon-more ant-dropdown-trigger more-options"
    data-testid="action-dropdown"
    role="img"
    tabindex="-1"
  >
    <svg
      aria-hidden="true"
      data-icon="more"
      fill="currentColor"
      focusable="false"
      height="1em"
      viewBox="64 64 896 896"
      width="1em"
    >
      <path
        d="M456 231a56 56 0 10112 0 56 56 0 10-112 0zm0 280a56 56 0 10112 0 56 56 0 10-112 0zm0 280a56 56 0 10112 0 56 56 0 10-112 0z"
      />
    </svg>
  </span>
</td>
`;

exports[`renders correctly when listing resources: table row 5 page 1 1`] = `
<td
  class="ant-table-cell ant-table-cell-ellipsis"
/>
`;

exports[`renders correctly when listing resources: table row 5 page 1 2`] = `
<td
  class="ant-table-cell ant-table-cell-ellipsis"
  title="Jane"
>
  Jane
</td>
`;

exports[`renders correctly when listing resources: table row 5 page 1 3`] = `
<td
  class="ant-table-cell ant-table-cell-ellipsis"
  title="Coda"
>
  Coda
</td>
`;

exports[`renders correctly when listing resources: table row 5 page 1 4`] = `
<td
  class="ant-table-cell ant-table-cell-ellipsis"
  title="codademo2"
>
  codademo2
</td>
`;

exports[`renders correctly when listing resources: table row 5 page 1 5`] = `
<td
  class="ant-table-cell"
>
  <a
    href="/admin/users/edit/718d900b-74ee-43ed-b075-3acc4e344fea"
  >
    Edit
  </a>
  <div
    class="ant-divider ant-divider-vertical"
    role="separator"
  />
  <span
    aria-label="more"
    class="anticon anticon-more ant-dropdown-trigger more-options"
    data-testid="action-dropdown"
    role="img"
    tabindex="-1"
  >
    <svg
      aria-hidden="true"
      data-icon="more"
      fill="currentColor"
      focusable="false"
      height="1em"
      viewBox="64 64 896 896"
      width="1em"
    >
      <path
        d="M456 231a56 56 0 10112 0 56 56 0 10-112 0zm0 280a56 56 0 10112 0 56 56 0 10-112 0zm0 280a56 56 0 10112 0 56 56 0 10-112 0z"
      />
    </svg>
  </span>
</td>
`;

exports[`renders correctly when listing resources: user details 1`] = `
<div
  data-testid="key-value"
>
  <dl
    class="singleKeyValue"
  >
    <div
      class="singleKeyValue-pair"
    >
      <dt
        class="singleKeyValue-pair__label"
      >
        <span
          class="ant-typography ant-typography-secondary"
        >
          UUID
        </span>
      </dt>
      <dd
        class="singleKeyValue-pair__value"
      >
        <span
          class="ant-typography"
        >
          081724e8-5fc1-47dd-8d0c-fa0c6ae6ddf0
        </span>
      </dd>
    </div>
  </dl>
</div>
`;

exports[`renders correctly when listing resources: user details 2`] = `
<div
  data-testid="key-value"
>
  <dl
    class="singleKeyValue"
  >
    <div
      class="singleKeyValue-pair"
    >
      <dt
        class="singleKeyValue-pair__label"
      >
        <span
          class="ant-typography ant-typography-secondary"
        >
          Practitioner Id
        </span>
      </dt>
      <dd
        class="singleKeyValue-pair__value"
      >
        <span
          class="ant-typography"
        >
          206
        </span>
      </dd>
    </div>
  </dl>
</div>
`;

exports[`renders correctly when listing resources: user details 3`] = `
<div
  data-testid="key-value"
>
  <dl
    class="singleKeyValue"
  >
    <div
      class="singleKeyValue-pair"
    >
      <dt
        class="singleKeyValue-pair__label"
      >
        <span
          class="ant-typography ant-typography-secondary"
        >
          Practitioner status
        </span>
      </dt>
      <dd
        class="singleKeyValue-pair__value"
      >
        <span
          class="ant-typography"
        >
          inactive
        </span>
      </dd>
    </div>
  </dl>
</div>
`;

exports[`renders correctly when listing resources: yes button 1`] = `
<button
  class="ant-btn ant-btn-primary ant-btn-sm"
  type="button"
>
  <span>
    Yes
  </span>
</button>
`;
